Colaboratory를 통해 생성됨

--- a/dap_w7_pub.ipynb
+++ b/dap_w7_pub.ipynb
@@ -1290,12 +1290,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 424
+          "height": 423
         },
         "id": "tL9vX0kih0lg",
-        "outputId": "1f65ac06-e3df-4da5-865d-178dba05125e"
+        "outputId": "92b8473d-0dec-46d1-935e-4bf2ffca9f6a"
       },
-      "execution_count": null,
+      "execution_count": 91,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1318,7 +1318,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-673d38a6-58fd-4803-9ef9-b5d6c6e5a949\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-18aa2091-892b-4b87-b2b2-b29444f1579c\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1452,7 +1452,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-673d38a6-58fd-4803-9ef9-b5d6c6e5a949')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-18aa2091-892b-4b87-b2b2-b29444f1579c')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1504,12 +1504,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-673d38a6-58fd-4803-9ef9-b5d6c6e5a949 button.colab-df-convert');\n",
+              "        document.querySelector('#df-18aa2091-892b-4b87-b2b2-b29444f1579c button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-673d38a6-58fd-4803-9ef9-b5d6c6e5a949');\n",
+              "        const element = document.querySelector('#df-18aa2091-892b-4b87-b2b2-b29444f1579c');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1529,8 +1529,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-537587e7-314b-42fb-bfc6-926b513eed1a\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-537587e7-314b-42fb-bfc6-926b513eed1a')\"\n",
+              "<div id=\"df-8354e715-fa63-433b-8403-8f39f4dd9a5c\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-8354e715-fa63-433b-8403-8f39f4dd9a5c')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1649,7 +1649,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-537587e7-314b-42fb-bfc6-926b513eed1a button');\n",
+              "        document.querySelector('#df-8354e715-fa63-433b-8403-8f39f4dd9a5c button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1660,7 +1660,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 69
+          "execution_count": 91
         }
       ]
     },
@@ -1681,9 +1681,9 @@
           "height": 430
         },
         "id": "5u6fKmsCl29C",
-        "outputId": "bf40efc0-7f06-4d14-e1bc-0b53e917b4bc"
+        "outputId": "cfba11c8-7338-4ee3-c05d-ab1b47932e28"
       },
-      "execution_count": 24,
+      "execution_count": 92,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1707,7 +1707,7 @@
         "# 이용해야할 offset은 '10AS'입니다. 필요에 따라 이용하세요.\n",
         "fig, ax = plt.subplots()\n",
         "ax.plot(df3['date'],df3['pce'], color='red')\n",
-        "ax.bar(df3.resample('10AS', on='year')['date'].transform('sum'),df3['pce'], width=3000, color='grey')\n",
+        "ax.bar(df3.set_index('date').groupby('date').resample('10AS').index.year,df3['pce'], width=3000, color='grey')\n",
         "###### 아래는 수정하지 마세요.\n",
         "\n",
         "plt.show()"
@@ -1715,26 +1715,23 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 819
+          "height": 795
         },
         "id": "20n-2WpYjfgJ",
-        "outputId": "1d71ec6c-0dd6-423c-d6e6-8b7e0b9f46b1"
+        "outputId": "5199e46a-98f0-4686-8469-6b2a7fe8fda7"
       },
-      "execution_count": 40,
+      "execution_count": 102,
       "outputs": [
         {
           "output_type": "error",
-          "ename": "TypeError",
+          "ename": "AttributeError",
           "evalue": "ignored",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-40-56c58235a06f>\u001b[0m in \u001b[0;36m<cell line: 8>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mfig\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0max\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msubplots\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0max\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf3\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'date'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdf3\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'pce'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolor\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'red'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0max\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf3\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresample\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'10AS'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'date'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'sum'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdf3\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'pce'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwidth\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m3000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolor\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'grey'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;31m###### 아래는 수정하지 마세요.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36mresample\u001b[0;34m(self, rule, axis, closed, label, convention, kind, loffset, base, on, level, origin, offset, group_keys)\u001b[0m\n\u001b[1;32m  11390\u001b[0m         \u001b[0mgroup_keys\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mbool\u001b[0m \u001b[0;34m|\u001b[0m \u001b[0mlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mNoDefault\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mno_default\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m  11391\u001b[0m     ) -> Resampler:\n\u001b[0;32m> 11392\u001b[0;31m         return super().resample(\n\u001b[0m\u001b[1;32m  11393\u001b[0m             \u001b[0mrule\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mrule\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m  11394\u001b[0m             \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36mresample\u001b[0;34m(self, rule, axis, closed, label, convention, kind, loffset, base, on, level, origin, offset, group_keys)\u001b[0m\n\u001b[1;32m   8856\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   8857\u001b[0m         \u001b[0maxis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_axis_number\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 8858\u001b[0;31m         return get_resampler(\n\u001b[0m\u001b[1;32m   8859\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   8860\u001b[0m             \u001b[0mfreq\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mrule\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/core/resample.py\u001b[0m in \u001b[0;36mget_resampler\u001b[0;34m(obj, kind, **kwds)\u001b[0m\n\u001b[1;32m   1542\u001b[0m     \"\"\"\n\u001b[1;32m   1543\u001b[0m     \u001b[0mtg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTimeGrouper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1544\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mtg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_resampler\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkind\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mkind\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1545\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1546\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/core/resample.py\u001b[0m in \u001b[0;36m_get_resampler\u001b[0;34m(self, obj, kind)\u001b[0m\n\u001b[1;32m   1723\u001b[0m             )\n\u001b[1;32m   1724\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1725\u001b[0;31m         raise TypeError(\n\u001b[0m\u001b[1;32m   1726\u001b[0m             \u001b[0;34m\"Only valid with DatetimeIndex, \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1727\u001b[0m             \u001b[0;34m\"TimedeltaIndex or PeriodIndex, \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: Only valid with DatetimeIndex, TimedeltaIndex or PeriodIndex, but got an instance of 'RangeIndex'"
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-102-d3ad6ea18cf7>\u001b[0m in \u001b[0;36m<cell line: 8>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mfig\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0max\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msubplots\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0max\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf3\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'date'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdf3\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'pce'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolor\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'red'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0max\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf3\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'date'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'date'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresample\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'10AS'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0myear\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdf3\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'pce'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwidth\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m3000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolor\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'grey'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;31m###### 아래는 수정하지 마세요.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/core/resample.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, attr)\u001b[0m\n\u001b[1;32m    202\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mattr\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    203\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 204\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mattr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    205\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    206\u001b[0m     \u001b[0;31m# error: Signature of \"obj\" incompatible with supertype \"BaseGroupBy\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: 'DatetimeIndexResamplerGroupby' object has no attribute 'index'"
           ]
         },
         {
@@ -1788,12 +1785,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 424
+          "height": 423
         },
         "id": "yhTjmbqwpJVO",
-        "outputId": "61e76a25-0ed4-4960-eaa9-750f8cab48b9"
+        "outputId": "349fe6a2-bda7-4d93-a274-c1a23c1fe08e"
       },
-      "execution_count": null,
+      "execution_count": 104,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1816,7 +1813,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-57bccae7-59cf-45b9-a7ea-03ab0c9edb34\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-0b60e3fe-93ed-4526-a2f8-ebdac1152fb6\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1950,7 +1947,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-57bccae7-59cf-45b9-a7ea-03ab0c9edb34')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0b60e3fe-93ed-4526-a2f8-ebdac1152fb6')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -2002,12 +1999,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-57bccae7-59cf-45b9-a7ea-03ab0c9edb34 button.colab-df-convert');\n",
+              "        document.querySelector('#df-0b60e3fe-93ed-4526-a2f8-ebdac1152fb6 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-57bccae7-59cf-45b9-a7ea-03ab0c9edb34');\n",
+              "        const element = document.querySelector('#df-0b60e3fe-93ed-4526-a2f8-ebdac1152fb6');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -2027,8 +2024,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-b3b0d71d-2be4-448a-9864-ba67ad430578\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b3b0d71d-2be4-448a-9864-ba67ad430578')\"\n",
+              "<div id=\"df-b8b865e0-4a09-4113-a0c6-24c9eafe4a8f\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b8b865e0-4a09-4113-a0c6-24c9eafe4a8f')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -2147,7 +2144,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-b3b0d71d-2be4-448a-9864-ba67ad430578 button');\n",
+              "        document.querySelector('#df-b8b865e0-4a09-4113-a0c6-24c9eafe4a8f button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -2158,7 +2155,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 40
+          "execution_count": 104
         }
       ]
     },
@@ -2180,12 +2177,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 322
+          "height": 525
         },
         "id": "zCX_zkw3qaPa",
-        "outputId": "18a31528-b6f8-4cdb-b625-8433cd0f98b2"
+        "outputId": "22867290-d496-4621-83d1-519d94454180"
       },
-      "execution_count": null,
+      "execution_count": 109,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2209,16 +2206,16 @@
         "###### 위는 수정하지 마세요.\n",
         "\n",
         "# Forward Fill을 수행하세요.\n",
-        "df4_ffill = #\n",
+        "df4_ffill = df4_targ.ffill()\n",
         "\n",
         "# Backward Fill을 수행하세요.\n",
-        "df4_bfill = #\n",
+        "df4_bfill = df4_targ.bfill()\n",
         "\n",
         "# Linear Interpolation을 수행하세요.\n",
-        "df4_lin = #\n",
+        "df4_lin = df4_targ.interpolate()\n",
         "\n",
         "# Nearest-neighbor Interpolation을 수행하세요.\n",
-        "df4_near = #\n",
+        "df4_near = df4_targ.interpolate(method='nearest')\n",
         "\n",
         "###### 아래는 수정하지 마세요.\n",
         "\n",
@@ -2252,12 +2249,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 608
+          "height": 561
         },
         "id": "V4IlLt9Ru1lr",
-        "outputId": "bbfdccc9-4fcb-47a0-964e-90693b382855"
+        "outputId": "0c6976d2-6aa8-4e34-b10f-1820b86a7d08"
       },
-      "execution_count": null,
+      "execution_count": 114,
       "outputs": [
         {
           "output_type": "display_data",
