Colaboratory를 통해 생성됨

--- a/dap_w11_pub.ipynb
+++ b/dap_w11_pub.ipynb
@@ -96,7 +96,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6bSu-TsBJV3R",
-        "outputId": "86069fe1-5cdf-4fce-cf1d-21c1f1099e3f"
+        "outputId": "c035bb92-2f5c-4715-e975-ef78b1f4d189"
       },
       "execution_count": 1,
       "outputs": [
@@ -166,7 +166,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yOH939nLTTQN",
-        "outputId": "3e26e13d-5c2d-4645-da7d-c5fef3367408"
+        "outputId": "a7ffe4cd-13c2-4740-e964-46396081c018"
       },
       "execution_count": 2,
       "outputs": [
@@ -229,7 +229,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WmMT5rhcg9gi",
-        "outputId": "2f00b7c4-5d5f-433b-972d-b4219dc80622"
+        "outputId": "83c3941a-571c-4990-fd98-4107212c8698"
       },
       "execution_count": 3,
       "outputs": [
@@ -288,15 +288,15 @@
           "height": 72
         },
         "id": "lxAkS19vmmQo",
-        "outputId": "3e3338e0-45b1-4296-b40f-7dfbf069737a"
+        "outputId": "5a51acff-e843-49ec-8091-f7bbae231930"
       },
-      "execution_count": 21,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "P-value [1.4288364090003192e-202] < Significant level [0.01]; H1 is accepted.\n",
+            "P-value [0.5801231230388639] >= Significant level [0.01]; H0 is accepted.\n",
             "28.343689655172415\n"
           ]
         },
@@ -304,14 +304,14 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'\\n\\n'"
+              "'\\n생존자의 평균 연령은 30세가 아니다.\\n'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 4
         }
       ]
     },
@@ -371,9 +371,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0HdtQExSg90w",
-        "outputId": "1a3d3284-2e36-4d2d-dfa4-d0e6f4e0072f"
+        "outputId": "d11dce40-dcdd-433a-846a-ea2bdcd7cf56"
       },
-      "execution_count": 22,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -434,12 +434,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 91
+          "height": 90
         },
         "id": "NHOI5PPJuS-8",
-        "outputId": "75213423-7129-4aa8-eb04-508734291aa3"
+        "outputId": "82388c66-1c3f-410d-b1bc-ba4bdbe924bc"
       },
-      "execution_count": 23,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -454,14 +454,14 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'\\n\\n'"
+              "'\\n생존자와 사망자의 평균 나이가 다르다.\\n'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 6
         }
       ]
     },
@@ -524,9 +524,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xz6JQWJLg-Na",
-        "outputId": "4930c629-054e-41f5-c4c4-5f5d3363fc93"
+        "outputId": "7efeb7d8-cc20-4a26-81af-20cf3e0a8d57"
       },
-      "execution_count": 24,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -598,9 +598,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bNmlTPieDIAz",
-        "outputId": "8d295987-7df8-4e70-eaac-944711c58903"
+        "outputId": "0f50c3ea-9588-4ab4-f737-2c65e6e30613"
       },
-      "execution_count": 25,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -624,22 +624,24 @@
         "# 아래에 귀무가설(H0)과 대립가설(H1)을 기재하세요.\n",
         "# H0\n",
         "\"\"\"\n",
-        "\n",
+        "성별에 따른 생존 여부 비율은 동일하다\n",
         "\"\"\"\n",
         "\n",
         "# H1\n",
         "\"\"\"\n",
-        "\n",
+        "성별에 따른 생존 여부 비율은 동일하지 않다\n",
         "\"\"\"\n",
         "\n",
         "# 아래 구간 내에서 카이제곱 검정을 수행하세요.\n",
         "######>\n",
         "\n",
+        "df_titanic = df_titanic.dropna(subset = [\"Survived\", \"Sex\"])\n",
+        "female_survival_perc = np.array(df_titanic[df_titanic[\"Sex\"] == \"female\"][\"Survived\"].value_counts().sort_index().values\n",
+        "                        / len(df_titanic[df_titanic[\"Sex\"] == \"female\"]))\n",
+        "male_survival_expectations = np.array(female_survival_perc) * len(df_titanic[df_titanic[\"Sex\"] == \"male\"])\n",
         "\n",
-        "\n",
-        "\n",
-        "\n",
-        "_, p_value = chisquare(male_age_observations, male_age_expectations)\n",
+        "male_survival_observations = np.array(df_titanic[df_titanic[\"Sex\"] == \"male\"][\"Survived\"].value_counts().sort_index().values)\n",
+        "_, p_value = chisquare(male_survival_observations, male_survival_expectations)\n",
         "\n",
         "a = 0.05\n",
         "\n",
@@ -647,37 +649,42 @@
         "  print(f\"P-value [{p_value}] < Significant level [{a}]; H1 is accepted.\")\n",
         "else:\n",
         "  print(f\"P-value [{p_value}] >= Significant level [{a}]; H0 is accepted.\")\n",
-        "\n",
-        "\n",
         "######<\n",
         "\n",
         "# 아래에 분석의 결론을 기재하세요.\n",
         "\"\"\"\n",
-        "\n",
+        "성별에 따른 생존 여부 비율은 동일하지 않다.\n",
         "\"\"\""
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 54
         },
         "id": "TLgjdCPDPfrK",
-        "outputId": "0f3bb244-029d-4a25-ba02-260cf4ea92d9"
+        "outputId": "0b967859-44cc-4a3c-dab1-52e49fc892d1"
       },
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "P-value [1.4288364090003192e-202] < Significant level [0.05]; H1 is accepted.\n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'\\n\\n'"
+              "'\\n성별에 따른 생존 여부 비율은 동일하지 않다.\\n'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 32
         }
       ]
     }
